@@ -414,7 +414,6 @@ webkit.org/b/232256 accessibility/auto-fill-crash.html [ Timeout ]
 
 # Tests failing with ATSPI implementation.
 webkit.org/b/235941 accessibility/children-changed-sends-notification.html [ Failure ]
-webkit.org/b/235941 accessibility/generated-content-with-display-table-crash.html [ Failure ]
 webkit.org/b/235941 accessibility/select-element-at-index.html [ Failure ]
 
 #////////////////////////////////////////////////////////////////////////////////////////
