@@ -1,5 +1,15 @@
 2022-02-28  Carlos Garcia Campos  <cgarcia@igalia.com>
 
+        [ATSPI] Always expose table cells (layout and CSS) that have rendered text content
+        https://bugs.webkit.org/show_bug.cgi?id=237204
+
+        Reviewed by Adrian Perez de Castro.
+
+        * accessibility/atspi/AccessibilityObjectAtspi.cpp:
+        (WebCore::AccessibilityObject::accessibilityPlatformIncludesObject const):
+
+2022-02-28  Carlos Garcia Campos  <cgarcia@igalia.com>
+
         [GTK][a11y] Test accessibility/gtk/xml-roles-exposed.html is failing since ATSPI switch
         https://bugs.webkit.org/show_bug.cgi?id=237202
 
