@@ -1,5 +1,16 @@
 2022-02-28  Carlos Garcia Campos  <cgarcia@igalia.com>
 
+        [ATSPI] Always expose table cells (layout and CSS) that have rendered text content
+        https://bugs.webkit.org/show_bug.cgi?id=237204
+
+        Reviewed by Adrian Perez de Castro.
+
+        * accessibility/gtk/nested-block-element-children-expected.txt: Rebaseline.
+        * platform/glib/TestExpectations: Remove accessibility/generated-content-with-display-table-crash.html.
+        * platform/gtk/TestExpectations: Remove accessibility/gtk/nested-block-element-children.html.
+
+2022-02-28  Carlos Garcia Campos  <cgarcia@igalia.com>
+
         [GTK][a11y] Test accessibility/gtk/xml-roles-exposed.html is failing since ATSPI switch
         https://bugs.webkit.org/show_bug.cgi?id=237202
 
